Fixed bug not letting to add g  gap on main component

--- a/order-summary-component-main/css/style.css
+++ b/order-summary-component-main/css/style.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.google.com/specimen/Red+Hat+Display');
 
-body {
-    font-family: 'Red Hat Display', sans-serif;
+* {
     margin: 0;
     padding: 0;
+}
+
+body {
+    font-family: 'Red Hat Display', sans-serif;
     height: 100vh;
-    background-image: url(../images/pattern-background-desktop.svg);
+    background-color: hsl(225, 100%, 94%);
+    background-image: url(images/pattern-background-desktop.svg);
+    background-repeat: no-repeat;
+    background-size: contain;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,22 +51,18 @@ body {
 
 .plan {
     background-color: hsl(225, 100%, 98%);
-    border-radius: 10px;
     display: flex;
+    padding: 10px;
+    border-radius: 10px;
     align-items: center;
-    justify-content: space-between;
-    padding: 20px;
 }
 
-.plan .left {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+.plan a {
+    color:hsl(245, 75%, 52%)
 }
 
 .payment {
-    display: flex;
-    flex-direction: column;
+    
 }
 
 .buttons {
